--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "@nestjs/platform-express": "^8.4.0",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/typescript": "^2.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "pg": "^8.7.3",
     "swagger-ui-express": "^4.3.0",
+    "ts-node": "^10.7.0",
     "tsc-init": "^2.1.0",
     "typeorm": "^0.2.45",
     "typescript": "^4.6.2"
