--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,11 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./src",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@modules/*": ["modules/*"],
+      "@shared/*": ["shared/*"]
+    }
   },
   "include": [
     "src"
