--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "@types/typescript": "^2.0.0",
+    "aws-sdk": "^2.1128.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "multer": "^1.4.4",
     "pg": "^8.7.3",
     "swagger-ui-express": "^4.3.0",
     "ts-node": "^10.7.0",
@@ -40,6 +42,7 @@
     "typescript": "^4.6.2"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.21"
   }
 }
